---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2021-12-12
  Changes:
    - Moved code within `composite_existing_icons` into separate function `composite_existing_icons_onto_icons_definition`
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2021-09-29
  Changes:
    - Entity rescaling function now processes values attached to a `position` field.
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2021-09-14
  Features:
    - Added Nauvius Day to compatibility whitelist
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2021-09-12
  Changes:
    - Revised handling for entities using `belt_animation_set`
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2021-08-14
  Features:
    - Revisions to all color masks for all entities, items, and icons are ongoing
    - Perceived brightness and contrast have been improved and oversaturation and color blowouts have been reduced for revised entities
    - Added "Realistic Reactor Glow", "Extended Angels", and "Offshore P.U.M.P.S. and ground water" to the whitelist for compatibility notifications
    - Added "Chevrons" as an additional option for tier labels
  Changes:
    - Revised tints to support new mask and highlights process; purple is now less pink
    - Setting "Color intensity" with options "Vibrant" and "Soft", which controlled the blending mode for the highlights layer, has been disabled; the current blending mode is equivalent to "Vibrant". The setting may be enabled, see `settings-updates.lua` for details