@@ -21,6 +21,7 @@ reskins-lib-scope-entities=Reskin entities
 reskins-lib-scope-equipment=Reskin equipment
 reskins-lib-scope-items-and-fluids=Reskin items and fluids
 reskins-lib-scope-technologies=Reskin technologies
+reskins-lib-scope-interface=Reskin interface
 
 reskins-lib-display-notifications=Display notifications
 
@@ -40,6 +41,7 @@ reskins-lib-scope-entities=Enables reskinning of structures, robots and vehicles
 reskins-lib-scope-equipment=Enables reskinning of equipment.
 reskins-lib-scope-items-and-fluids=Enables reskinning of items, fluids and related recipes.
 reskins-lib-scope-technologies=Enables reskinning of technologies.
+reskins-lib-scope-interface=Enables reskinning of crafting tabs.
 
 reskins-lib-display-notifications=Allows for update notifications, and the results of missing Artisanal Reskins mod checks to be displayed.
 
